completed phase 6
